# epic-executor

./: CLAUDE.md  README.md  pyproject.toml  run.sh
prompts/: config.yaml  implementation.yaml  research.yaml  verification.yaml
src/epic_executor/: __init__.py  cli.py  config.py  executor.py  impl_agent.py  parser.py  planner.py  pool.py  research_agent.py  scheduler.py  status.py  verify_agent.py  worktree.py
src/epic_executor/prompts/: implementation.yaml
