[project]
name = "epic-executor"
version = "0.1.1"
description = "Parallel task executor for epic/task markdown files"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0",
    "langgraph>=0.2",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "InquirerPy>=0.3",
    "rich>=13.0",
]

[project.scripts]
epic-executor = "epic_executor.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epic_executor"]

[tool.hatch.build.targets.editable]
packages = ["src/epic_executor"]


